Fix LibraryService: collector(Collectors.toList()) -> toList()